# MOSE

./: .gitignore  .gitmodules  .mailmap  AUTHORS.md  CITATION.cff  CMakeLists.txt  README.md  install.sh  mkdocs.yml
.githooks/: pre-push
.github/workflows/: authors.yml  ctest.yml  docs.yml
cmake/: FindOpenMP_Fortran.cmake  MOSEConfig.cmake.in  SetFortranFlags.cmake  SetParallelizationLibrary.cmake
docs/: index.md  overview.md
docs/about/: acknowledgements.md  index.md  license.md
docs/development/: contributing.md  index.md  performance_notes.md  structure.md  testing.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
docs/theory/: equilibrium.md  governing-equations.md  index.md  kinetics.md  numerics.md  riemann-solvers.md  rotating-frame.md  thermo.md  time-integration.md  turbulence.md
docs/theory/images/: sweby.py
docs/user/: boundary-conditions.md  index.md  initial-conditions.md  input.md  registry.md  using.md
docs/vv/: 1D-fer14.md  1D.md  2D-flat-plate-laminar.md  2D-flat-plate-turbulent.md  2D-hypersonic-cylinder.md  2D-nozzle.md  2D-oblique-shock.md  2D-swbli.md  2D-woodward-colella.md  index.md  rotating-frame.md
scripts/: contributors.yml  generate-authors.py
src/app/: CMakeLists.txt  docgen.f90  main.f90
src/lib/: CMakeLists.txt  readme.md
src/lib/base/: Advanced_Types_m.f90  Base_Types_m.f90  Global_m.f90  Parameters_m.f90  Series_Data_m.f90
src/lib/config/: Assign_Setup.f90  Backend_INI.f90  Config_Types_m.f90  Read_Ini.f90  Register_IO.f90  Register_Numerics.f90  Register_Physics.f90  Register_Sim_Param.f90  Registry.f90
src/lib/diagnostic/: Mod_Diagnostic.f90
src/lib/driver/: Mod_Allocate_Data.f90  Procedures_m.f90  Wrap_Postprocess.f90  Wrap_Setup.f90  Wrap_Solve.f90
src/lib/io/: IO_BC.f90  IO_BC_Q2D.f90  IO_Probes.f90  IO_Solution.f90  IO_Wall.f90  Load_Chemistry.f90  Load_ThermoTransport.f90
src/lib/numerics/fluxes/: Lib_Convective.f90  Lib_Diffusive.f90  Lib_Shock_Detector.f90  Mod_Fluxes.f90
src/lib/numerics/fluxes/bc/: Lib_BC_Fluxes.f90  Lib_BC_Fluxes_Connection.f90  Lib_BC_Fluxes_Extrapolation.f90  Lib_BC_Fluxes_FarField.f90  Lib_BC_Fluxes_Inflow.f90  Lib_BC_Fluxes_Inflow_Nozzle.f90  Lib_BC_Fluxes_Manifold.f90  Lib_BC_Fluxes_Outflow.f90  Lib_BC_Fluxes_Rotational.f90  Lib_BC_Fluxes_SRM.f90  Lib_BC_Fluxes_Symmetry.f90  Lib_BC_Fluxes_Wall_Heat.f90  Lib_BC_Fluxes_Wall_Melting.f90  Lib_BC_Fluxes_Wall_Pyrolysis.f90  Lib_BC_Fluxes_Wall_Temperature.f90  Mod_BC_Fluxes.f90
src/lib/numerics/fluxes/riemann/: Lib_Riemann_AUSM.f90  Lib_Riemann_Godunov.f90  Lib_Riemann_HLL.f90  Lib_Riemann_LF.f90  Lib_Riemann_SLAU.f90  Mod_Riemann.f90
src/lib/numerics/multigrid/: Lib_Multigrid.f90  Mod_Multigrid.f90
src/lib/numerics/space/: Lib_Ghost.f90  Lib_Limiters.f90  Lib_Metrics.f90  Lib_Reconstruction.f90  Mod_Metrics.f90  Mod_Space.f90
src/lib/numerics/time/: Mod_dt.f90
src/lib/numerics/time/explicit/: Lib_IRS.f90  Lib_Newstate.f90  Lib_RK.f90  Lib_Strang.f90  Mod_Explicit.f90  Mod_Newstate.f90
src/lib/parallel/: Mod_GhostExchange.f90  Mod_MPI.f90
src/lib/physics/: Lib_Chemistry.f90  Lib_GSI.f90  Lib_RotatingFrame.f90  Lib_Soot.f90  Mod_Soot.f90
src/lib/physics/turbulence/: Lib_Fluid.f90  Lib_QCR2000.f90  Lib_RANS.f90  Lib_SSGLRR.f90  Lib_SST.f90  Lib_Spalart.f90  Lib_SpalartShur.f90  Lib_Wilcox2006.f90  Mod_RANS.f90
test/: CMakeLists.txt  test.sh
test/1D/Ein91/: input.ini  verify.py
test/1D/Ein91/INPUT/: bc_x2.txt  ic_x1.tec  ic_x2.tec  ic_x4.tec  ic_x8.tec
test/1D/Fer14/: MOSE.sh  input.ini  kee.yaml  verify.py
test/1D/Fer14/INPUT/: bc.txt  chemistry-info.txt  ic.tec  phase.txt
test/1D/Fer14/MESH/: mesh.tec
test/1D/Fer14/reference/: velocity.csv
test/1D/Noh87/: input.ini  verify.py
test/1D/Noh87/INPUT/: bc_x8.txt  ic_x1.tec  ic_x2.tec  ic_x4.tec  ic_x8.tec
test/1D/Sod79/: MOSE.sh  check.py  input.ini  verify.py
test/1D/Sod79/INPUT/: ic_x1.tec  ic_x2.tec  ic_x4.tec  ic_x8.tec
test/1D/Sod79/MESH/: mesh_x2.tec  mesh_x4.tec  mesh_x8.tec
test/1D/Sod79/reference/: exact.txt
test/1D/Tor99/: MOSE.sh  input.ini  verify.py
test/1D/Tor99/INPUT/: bc_x1.txt  bc_x4.txt  ic_x1.tec  ic_x2.tec  ic_x4.tec  ic_x8.tec
test/1D/Tor99/MESH/: mesh_x1.tec
test/2D/euler/chang-nozzle/: MOSE.sh  input.ini  verify.py
test/2D/euler/chang-nozzle/INPUT/: bc.txt  ic.tec  phase.txt
test/2D/euler/chang-nozzle/MESH/: mesh.tec
test/2D/euler/hypersonic-cylinder/: MOSE.sh  input.ini  verify.py
test/2D/euler/hypersonic-cylinder/INPUT/: bc.txt  ic.tec
test/2D/euler/hypersonic-cylinder/MESH/: mesh.tec  script.geo
test/2D/euler/oblique-shock/: MOSE.sh  input.ini  verify.py
test/2D/euler/oblique-shock/INPUT/: bc.txt  ic.tec
test/2D/euler/prandtl-meyer/: MOSE.sh  check.py  input.ini  plot.py
test/2D/euler/ramp-channel/: input.ini  verify.py
test/2D/euler/rocket-nozzle/: verify.py
test/2D/euler/supersonic-forward-step/: MOSE.sh  input.ini  verify.py
test/2D/viscous/flat-plate-laminar/: MOSE.sh  input.ini  verify.py
test/2D/viscous/flat-plate-turbulent/: MOSE.sh  input.ini  verify.py
test/2D/viscous/swbli/: MOSE.sh  input.ini  verify.py
test/3D/coriolis-channel/: MOSE.sh  input.ini
test/3D/coriolis-channel/INPUT/: bc.txt  ic.tec
test/3D/coriolis-channel/MESH/: mesh.tec
test/3D/pressure-centrifugal/: input.ini
test/3D/pressure-centrifugal/INPUT/: bc.txt  ic.tec
test/3D/pressure-centrifugal/MESH/: mesh.tec
test/common/Air/: input.ini
test/common/Air-viscous/: phase.txt
test/common/nondim-Air/: input.ini  phase.txt
(+54 files in other folders)
